--- a/bookyourshow/package.json
+++ b/bookyourshow/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
@@ -20,6 +21,7 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "https://movie-api-1-lnrq.onrender.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
